tests/bad_programs/parse_errors/decl_stm_in_while_exp.nc
int main() {
    while (bool b = true) {
    }
    return 0;
}
